--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,108 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==4.2.2
+appdirs==1.4.4
+async-timeout==4.0.2
+attrs==22.2.0
+audioread==3.0.0
+Babel==2.11.0
+backports.zoneinfo==0.2.1
+blinker==1.5
+cachetools==5.3.0
+certifi @ file:///croot/certifi_1671487769961/work/certifi
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+clldutils==3.19.0
+colorama==0.4.6
+colorlog==6.7.0
+csvw==3.1.3
 datasets==2.5.1
+decorator==5.1.1
+dill==0.3.5.1
+dlinfo==1.2.1
+eng-to-ipa==0.0.2
+entrypoints==0.4
 ffmpeg==1.4
-ffmpeg_python==0.2.0
+ffmpeg-python==0.2.0
+filelock==3.9.0
+frozenlist==1.3.3
+fsspec==2023.1.0
+future==0.18.3
+gitdb==4.0.10
+GitPython==3.1.31
+huggingface-hub==0.12.1
+idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+isodate==0.6.1
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+language-tags==1.2.0
 librosa==0.9.2
+llvmlite==0.39.1
+lxml==4.9.2
+Markdown==3.4.1
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+multidict==6.0.4
+multiprocess==0.70.13
+numba==0.56.4
 numpy==1.23.1
+packaging==23.0
 pandas==1.4.4
+phonemizer==3.2.1
+Pillow==9.4.0
+pkgutil_resolve_name==1.3.10
+pooch==1.6.0
+protobuf==3.20.3
+pyarrow==11.0.0
+pycparser==2.21
+pydeck==0.8.0
+Pygments==2.14.0
+pylatexenc==2.10
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+rdflib==6.2.0
+regex==2022.10.31
 requests==2.28.1
+resampy==0.4.2
+responses==0.18.0
+rfc3986==1.5.0
+rich==13.3.1
+scikit-learn==1.2.1
 scipy==1.9.1
-setuptools==59.8.0
+segments==2.2.1
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
 sounddevice==0.4.5
 soundfile==0.11.0
 streamlit==1.11.0
-streamlit_lottie==0.0.3
+streamlit-lottie==0.0.3
+tabulate==0.9.0
+threadpoolctl==3.1.0
+tokenizers==0.12.1
+toml==0.10.2
+toolz==0.12.0
 torch==1.12.1
+tornado==6.2
+tqdm==4.64.1
 transformers==4.22.2
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.2
+uritemplate==4.1.1
+urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
+xxhash==3.2.0
+yarl==1.8.2
+zipp==3.14.0
